Bug 454729 - Pressing Enter on a task does not activate the task
Summary: Pressing Enter on a task does not activate the task
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-06-02 09:34 UTC by Fushan Wen
Modified: 2022-06-02 15:54 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2022-06-02 09:34:32 UTC
SUMMARY
Pressing Enter on a task will not activate the task. Instead the old window is activated again.


STEPS TO REPRODUCE
1. Meta+Alt+P
2. Tab to focus on a task item
3. Press Enter

OBSERVED RESULT
The old window is activated

EXPECTED RESULT
The new window is activated

SOFTWARE/OS VERSIONS
5.25 regression
Comment 1 Bug Janitor Service 2022-06-02 09:40:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/968
Comment 2 Bug Janitor Service 2022-06-02 09:49:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1799
Comment 3 Nate Graham 2022-06-02 15:52:04 UTC
Git commit 47acfaff51480f02bac1b0dc429dbeb4055478b9 by Nate Graham, on behalf of Fushan Wen.
Committed on 02/06/2022 at 15:45.
Pushed by ngraham into branch 'master'.

shell: fix pressing enter not activating the new window

In panelview.cpp, the old window focus is restored when switching to
Passive status. This fixes the behavior by setting the panel status to a
status that is not AcceptingInputStatus.
Related: bug 352476
FIXED-IN: 5.25

M  +2    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/47acfaff51480f02bac1b0dc429dbeb4055478b9
Comment 4 Nate Graham 2022-06-02 15:54:40 UTC
Git commit 9bf0b879931d41c981f814eaa27b356fe56e5f2a by Nate Graham, on behalf of Fushan Wen.
Committed on 02/06/2022 at 15:54.
Pushed by ngraham into branch 'Plasma/5.25'.

shell: fix pressing enter not activating the new window

In panelview.cpp, the old window focus is restored when switching to
Passive status. This fixes the behavior by setting the panel status to a
status that is not AcceptingInputStatus.
Related: bug 352476
FIXED-IN: 5.25


(cherry picked from commit 47acfaff51480f02bac1b0dc429dbeb4055478b9)

M  +2    -1    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9bf0b879931d41c981f814eaa27b356fe56e5f2a