shell: fix pressing enter not activating the new window

In panelview.cpp, the old window focus is restored when switching to
Passive status. This fixes the behavior by setting the panel status to a
status that is not AcceptingInputStatus.

BUG: 454729
CCBUG: 352476
FIXED-IN: 5.25